# qtranspilation

./: README.md  arct_token_swapping.py  grids.npy  parallelTokenSwapping.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  simpleRouter.py  simpleTranspiler.py  testDefaultTranspiler.py  testMyTranspiler.py  tox.ini  utils.py
WQC21/: arct_token_swapping.py  test.py
examples/: comparison.ipynb  comparison_window_plus_1.ipynb  comparison_window_plus_1_6_6.ipynb  comparison_window_times_2.ipynb  comparison_window_times_2_6_6.ipynb  ets.ipynb  grid_route.ipynb  grid_routing.ipynb  running_example.ipynb  test_local_random_permutation.ipynb  test_transposition.py
examples/ipdps/: ipdps.py  ipdps_w_plus_1_4_4.ipynb  ipdps_w_plus_1_6_6.ipynb  ipdps_w_times_2_4_4.ipynb  ipdps_w_times_2_6_6.ipynb
examples/ipdps/medusa/: figures.md
examples/ipdps/toranj/: figures.md
qtranspiler/: __init__.py  architectures.py  utils.py
qtranspiler/routing/: __init__.py  algorithms.py  ets.py  grid_routing.py
