[metadata]
name = qtranspiler
description = slap that like button
author = "Xin Liang, R. Tohid"
license = BSL-1.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    qtranspiler

install_requires =
    matplotlib>=3.5.1
    networkx>=2.6.3 
    numpy>=1.21.5

python_requires = >=3.8

package_dir =
    =.

zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.24.3
    pytest>=6.2.5
    pytest-cov>=3.0.0
    mypy>=0.930
    tox>=3.24.5

[options.package_data]
qtranspiler = py.typed

[flake8]
max-line-length = 80